--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-# Python cache
+# Python
 __pycache__/
-*.py[cod]
-*$py.class
+*.pyc
+*.pyo
+*.pyd
 
 # Environments
 .env/
 .venv/
 venv/
 
-# System/IDE files
-.DS_Store       (Mac)
-.idea/          (PyCharm)
-.vscode/        (VS Code)
+# IDE
+.vscode/
+.idea/
