--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Python
 __pycache__/
+*.py[cod]
+*$py.class
 *.pyc
 *.pyo
 *.pyd
@@ -9,6 +11,7 @@ __pycache__/
 .venv/
 venv/
 
-# IDE
+# IDE/System
+.DS_Store
 .vscode/
 .idea/
